Updated the ant build file to allow MPXJ to be built without the components that depend on JAXB
Fixed a problem with writing MS Project compatible MSPDI XML files in non-GMT timezones.
Fixed a problem with writing MSPDI XML files in non-GMT timezones.
Rationalised setDefaultStartTime and setDefaultEndTime methods
Added MppXml utility

Version 0.0.17
Fixed a bug where a decimal point was being appended to the currency format even if no decimal digits were required.
Fixed a bug where special characters appearing in the currency symbol were not being quoted.
Fixed a bug that caused resource assignments to be incorrectly read from some MPP8 files.
Added a new write method to MPXFile allowing the user control over the character encoding used when writing an MPX file.

Version 0.0.16
Fixed bug causing some extended boolean attributes to be read incorrectly.
Fixed bug causing MPP8 file task data to be read incorrectly under certain circumstances.
Updated calendar duration code to account for calendar exceptions.

Version 0.0.15
Fixed a bug causing resource assignments to be duplicated in an MPX file created programatically.
Fixed a bug causing an incorrect duration value to be read from an MPP9 file.
Fixed a bug causing invalid MPX files to be written in locales which don't use a period as the decimal separator.
Fixed a bug causing embedded quote and comma characters in task and resource notes to be handled incorrectly.
Added simple JUnit test to demonstrate iteration through relationships.
Added an example of programatically creating a partially complete task to the MPXCreate.java example.
Added default values to the MPX project header.
Added support for reading the RemainingDuration field from an MPP9 file.
Updated predecessor and successor method documentation.
Updated Task.get/set ResourceInitials and Task.get/set ResourceNames method documentation.
Updated to extract the following fields from resource assignment data in MPP files which were previously not imported: